Cloudianry config file

--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,17 @@ MAIL_HOST =
 MAIL_USER = 
 MAIL_PASS =
 SUPPORT_EMAIL = 
+
 MONGODB_URL = 
+
 JWT_SECRET_KEY = 
+
+
+CLOUD_NAME = 
+API_KEY =
+API_SECRET =  
 FOLDER_NAME = 
+
+
 RAZORPAY_KEY = 
 RAZORPAY_SECRET = 
