--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.10",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
